--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+FileStream/FileStream/Bin/Microsoft.AspNet.SignalR.Core.xml
+FileStream/FileStream/Bin/Microsoft.Owin.xml
